2011-09-28  Kentaro Hara  <haraken@chromium.org>

        Implement an ErrorEvent constructor for V8
        https://bugs.webkit.org/show_bug.cgi?id=68336

        Reviewed by Adam Barth.

        Enabled fast/events/constructors/error-event-constructor.html,
        since V8 now has the constructor for ErrorEvent.

        * platform/chromium/test_expectations.txt:

2011-09-28  Gabor Rapcsanyi  <rgabor@webkit.org>

        [Qt][GTK] Skip http/tests/multipart/stop-crash.html because it fails after r96174.
        https://bugs.webkit.org/show_bug.cgi?id=68979

        Reviewed by Csaba Osztrogonác.

        * platform/gtk/Skipped: Skip http/tests/multipart/stop-crash.html failing
        * platform/qt/Skipped: Skip http/tests/multipart/stop-crash.html failing

2011-09-28  Gabor Rapcsanyi  <rgabor@webkit.org>

        fast/canvas/crash-set-font.html failing on all platform because
        getCSSCanvasContext needs 4 parameters
        https://bugs.webkit.org/show_bug.cgi?id=66291

        Reviewed by Csaba Osztrogonác.

        * fast/canvas/crash-set-font.html: adding the fourth parameter

2011-09-28  Shinichiro Hamaji  <hamaji@chromium.org>

        [Chromium] Layout Test fast/canvas/canvas-composite-transformclip.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=68895

        Unreviewed manual rebaseline for linux gpu.

        * platform/chromium-gpu-linux/fast/canvas/canvas-composite-expected.png:

2011-09-28  Shinichiro Hamaji  <hamaji@chromium.org>

        [Chromium] Layout Test svg/custom/oversized-pattern-scale.svg and svg/custom/transformed-pattern-clamp-svg-root.svg are flaky
        https://bugs.webkit.org/show_bug.cgi?id=68982

        Unreviewed test_expectations.txt update.

        * platform/chromium/test_expectations.txt:

2011-09-28  Ilya Tikhonovsky  <loislo@chromium.org>

        Web Inspector: Unreviewed. Slight adjustment of the test content for better representation of the performance.
