@@ -67,29 +67,30 @@ InspectorTest.runPerformanceTest = function(perfTest, executeTime, callback)
         _dump: function()
         {
             for (var testName in this._times)
-                this._dumpTestStats(testName, this._times[testName]);
+                InspectorTest.dumpTestStats(testName, this._times[testName]);
 
             var url = WebInspector.mainResource._documentURL;
             var regExp = /([^\/]+)\.html/;
             var matches = regExp.exec(url);
-            this._dumpTestStats("heap-delta-kb-" + matches[1], this._heapSizeDeltas, 1024);
+            InspectorTest.dumpTestStats("heap-delta-kb-" + matches[1], this._heapSizeDeltas, 1024);
         },
 
-        _dumpTestStats: function(testName, samples, divider)
-        {
-            divider = divider || 1;
-            var stripNResults = Math.floor(samples.length / 10);
-            samples.sort(function(a, b) { return a - b; });
-            var sum = 0;
-            for (var i = stripNResults; i < samples.length - stripNResults; ++i)
-                sum += samples[i];
-            InspectorTest.addResult("* " + testName + ": " + Math.floor(sum / (samples.length - stripNResults * 2) / divider));
-            InspectorTest.addResult(testName + " min/max/count: " + Math.floor(samples[0] / divider) + "/" + Math.floor(samples[samples.length-1] / divider) + "/" + samples.length);
-        }
     }
 
     var timer = new Timer(perfTest, callback);
     timer._runTest();
+}
+
+InspectorTest.dumpTestStats = function(testName, samples, divider)
+{
+    divider = divider || 1;
+    var stripNResults = Math.floor(samples.length / 10);
+    samples.sort(function(a, b) { return a - b; });
+    var sum = 0;
+    for (var i = stripNResults; i < samples.length - stripNResults; ++i)
+        sum += samples[i];
+    InspectorTest.addResult("* " + testName + ": " + Math.floor(sum / (samples.length - stripNResults * 2) / divider));
+    InspectorTest.addResult(testName + " min/max/count: " + Math.floor(samples[0] / divider) + "/" + Math.floor(samples[samples.length-1] / divider) + "/" + samples.length);
 }
 
 InspectorTest.addBackendResponseSniffer = function(object, methodName, override, opt_sticky)
