@@ -1,3 +1,15 @@
+2011-09-28  Ilya Tikhonovsky  <loislo@chromium.org>
+
+        Web Inspector: UI performance test for Inspector start-up time is required.
+        https://bugs.webkit.org/show_bug.cgi?id=68986
+
+        Reviewed by Yury Semikhatsky.
+
+        * inspector/performance/resources/inspector-startup-time.html: Added.
+        * inspector/performance/resources/performance-test.js:
+        (initialize_TimeTracker.InspectorTest.runPerformanceTest.Timer.prototype._dump):
+        (initialize_TimeTracker.InspectorTest.runPerformanceTest):
+
 2011-09-28  Kentaro Hara  <haraken@chromium.org>
 
         Implement an ErrorEvent constructor for V8
